# smilingfox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: publish
src/smilingfox/: __init__.py  _bundle.py  _model.py  cli.py  tagger.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_model.py  test_tagger.py
