[project]
name = "smilingfox"
version = "0.1.0"
description = "Python API and CLI for the SmilingFox E621 image tagger"
authors = [{ name = "Nolla Fox", email = "nollafox.dev@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "torchvision>=0.20",
  "timm>=1.0.0",
  "pillow>=10.0",
  "huggingface-hub>=0.24",
  "click>=8.1",
  "rich>=13.0",
]

[project.scripts]
smilingfox = "smilingfox.cli:main"

[project.urls]
Repository = "https://github.com/nollafox/smilingfox"
Model = "https://huggingface.co/nollafox/smilingfox"

[tool.poetry]
packages = [{ include = "smilingfox", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
